--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,23 @@
    
   border-bottom : 4px solid black
 }
+
+.index{
+  z-index: 10;
+}
+
+
+@media screen and (min-width: 480px) {
+ .mblock{
+  display : block;
+ }
+
+  
+} 
+@media screen and (max-width: 480px) {
+  
+
+ .mhidden{
+  display: hidden;
+ }
+} 
